Fixed container height issue on mobile

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -93,7 +93,7 @@ input:focus {
 }
 
 .container {
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100vw;
   display: flex;
   flex-direction: column;
@@ -244,7 +244,7 @@ input:focus {
 }
 
 // Really small mobile screens hide credits
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 350px) {
   .credits {
     display: none;
   }
